kind/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifont
spec:
#  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-api
                port:
                  number: 80

          - path: /rs
            pathType: Prefix
            backend:
              service:
                name: rs-api
                port:
                  number: 80

#          - path: /spring-admin
#            pathType: Prefix
#            backend:
#              service:
#                name: spring-admin
#                port:
#                  number: 80
